# Calorie

./: README.md  app.py  index.html  pyproject.toml
calorie/: app.py
